--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 ---
 layout: base
-title: Page not found &mdash; Simon Pascal Klein &mdash; Graphic &amp; web design professional
+title: Page not found &mdash; Stephen Lange
 ---
         <div id="header" class="center">
             <div class="article-logo floatLeft">
                 <h1>
 				    <a href="/" title="Return to homepage" tabindex="0" accesskey="H">
-				        <span class="hoverline">kle</span><span class="middot">&middot;</span>p<span class="hoverline">as</span>
+				        <span class="hoverline">stephenlange</span><span class="middot">&middot;</span><span class="hoverline">org</span>
 				    </a>
                 </h1>
             </div>
@@ -24,7 +24,7 @@ title: Page not found &mdash; Simon Pascal Klein &mdash; Graphic &amp; web desig
                     });
                 </script>
                 <p class="moin">Sorry, the page you queried for isn&rsquo;t at this location; it could have been misplaced.</p>
-                <p class="note">If it&rsquo;s likely to be my mistake or notably you were linked here from somewhere on-site (within klepas.org) please <a ref="email" href="mailto:klepas@klepas.org" title="Email Simon Pascal Klein">give me heads up about it</a> so I can correct the error.</p>
+                <p class="note">If it&rsquo;s likely to be my mistake or notably you were linked here from somewhere on-site (within stephenlange.org) please <a ref="email" href="mailto:stvlange@gmail.com" title="Email Stephen Lange">give me heads up about it</a> so I can correct the error.</p>
                 <p>In the mean time please use the navigation or try searching for what you&rsquo;re after:</p>
                 <div class="sitesearch sitesearch404">
                     <!-- Google Custom Search Element -->
