--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: stephenlange.org
 # Note that this index page uses a full-width layout!
 ---
 
-  <h1 class="content-listing-header sans">Articles</h1>
+  <h1 class="content-listing-header sans">Thoughts</h1>
   <ul class="content-listing ">
     {% for post in site.posts %}      
         <li class="listing">
